--- a/groceries.bib
+++ b/groceries.bib
@@ -399,6 +399,24 @@
   file = {/Users/gregmacfarlane/Zotero/storage/75W8UMUZ/Finkel - INTEGRATING THE SAFE SYSTEM APPROACH WITH THE HIGH.pdf}
 }
 
+@article{fitzpatrick2006,
+  title = {Another {{Look}} at {{Pedestrian Walking Speed}}},
+  author = {Fitzpatrick, Kay and Brewer, Marcus A. and Turner, Shawn},
+  year = {2006},
+  month = jan,
+  journal = {Transportation Research Record},
+  volume = {1982},
+  number = {1},
+  pages = {21--29},
+  publisher = {{SAGE Publications Inc}},
+  issn = {0361-1981},
+  doi = {10.1177/0361198106198200104},
+  urldate = {2023-08-25},
+  abstract = {Pedestrians have a wide range of needs and abilities. FHWA's Manual on Uniform Traffic Control Devices for Streets and Highways includes a walking speed of 4.0 ft/s (1.2 m/s) for calculating pedestrian clearance intervals for traffic signals. It also includes a comment that where pedestrians who walk slower than normal, or pedestrians who use wheelchairs, routinely use the crosswalk, a walking speed of less than 4.0 ft/s should be considered in determining the pedestrian clearance times. A 2005 TCRP-NCHRP study found a 15th percentile walking speed for young pedestrians of 3.77 ft/s (1.15 m/s) and a 15th percentile walking speed for older pedestrians of 3.03 ft/s (0.92 m/s). The study also determined that there is a statistical difference in walking speeds between older (older than 60 years) and younger (60 years and younger) pedestrians. Using population projections and the 15th percentile walking speeds for each population group more than 15 years old, the proportionally weighted 15th percentile walking speed for 2045 is 3.56 ft/s (1.09 m/s). Comparing the findings from the TCRP-NCHRP study with previous work results in the following recommendations: 3.5-ft/s (1.07-m/s) walking speed for timing of a traffic signal; if older pedestrians are a concern, then a 3.0-ft/s (0.9-m/s) walking speed should be used.},
+  langid = {english},
+  file = {/Users/gregmacfarlane/Zotero/storage/FAE7VRNV/Fitzpatrick et al. - 2006 - Another Look at Pedestrian Walking Speed.pdf}
+}
+
 @techreport{fns2021,
   title = {Thrifty {{Food Plan}}},
   author = {{FNS}},
